@@ -18,9 +18,7 @@ package com.github.tomakehurst.wiremock.core;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.NOT_MATCHED;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.TO_LOGGED_REQUEST;
 import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.collect.Iterables.contains;
-import static com.google.common.collect.Iterables.transform;
 
 import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
@@ -42,15 +40,12 @@ import com.github.tomakehurst.wiremock.store.SettingsStore;
 import com.github.tomakehurst.wiremock.store.Stores;
 import com.github.tomakehurst.wiremock.stubbing.*;
 import com.github.tomakehurst.wiremock.verification.*;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import org.apache.commons.lang3.mutable.MutableBoolean;
 
 public class WireMockApp implements StubServer, Admin {
@@ -98,7 +93,7 @@ public class WireMockApp implements StubServer, Admin {
         options.requestJournalDisabled()
             ? new DisabledRequestJournal()
             : new StoreBackedRequestJournal(
-                options.maxRequestJournalEntries(),
+                options.maxRequestJournalEntries().orElse(null),
                 customMatchers,
                 stores.getRequestJournalStore());
 
@@ -125,7 +120,7 @@ public class WireMockApp implements StubServer, Admin {
       MappingsLoader defaultMappingsLoader,
       MappingsSaver mappingsSaver,
       boolean requestJournalDisabled,
-      Optional<Integer> maxRequestJournalEntries,
+      Integer maxRequestJournalEntries,
       Map<String, ResponseDefinitionTransformer> transformers,
       Map<String, RequestMatcherExtension> requestMatchers,
       FileSource rootFileSource,
@@ -203,27 +198,15 @@ public class WireMockApp implements StubServer, Admin {
   }
 
   private List<RequestFilter> getAdminRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToAdmin();
-              }
-            })
-        .toList();
+    return options.extensionsOfType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToAdmin)
+        .collect(Collectors.toList());
   }
 
   private List<RequestFilter> getStubRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToStubs();
-              }
-            })
-        .toList();
+    return options.extensionsOfType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToStubs)
+        .collect(Collectors.toList());
   }
 
   private void loadDefaultMappings() {
@@ -379,10 +362,10 @@ public class WireMockApp implements StubServer, Admin {
   public FindRequestsResult findUnmatchedRequests() {
     try {
       List<LoggedRequest> requests =
-          from(requestJournal.getAllServeEvents())
+          requestJournal.getAllServeEvents().stream()
               .filter(NOT_MATCHED)
-              .transform(TO_LOGGED_REQUEST)
-              .toList();
+              .map(TO_LOGGED_REQUEST)
+              .collect(Collectors.toList());
       return FindRequestsResult.withRequests(requests);
     } catch (RequestJournalDisabledException e) {
       return FindRequestsResult.withRequestJournalDisabled();
@@ -409,15 +392,10 @@ public class WireMockApp implements StubServer, Admin {
   @Override
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
     ImmutableList.Builder<NearMiss> listBuilder = ImmutableList.builder();
-    Iterable<ServeEvent> unmatchedServeEvents =
-        from(requestJournal.getAllServeEvents())
-            .filter(
-                new Predicate<ServeEvent>() {
-                  @Override
-                  public boolean apply(ServeEvent input) {
-                    return input.isNoExactMatch();
-                  }
-                });
+    List<ServeEvent> unmatchedServeEvents =
+        requestJournal.getAllServeEvents().stream()
+            .filter(ServeEvent::isNoExactMatch)
+            .collect(Collectors.toList());
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
       listBuilder.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
@@ -556,15 +534,7 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     if (importOptions.getDeleteAllNotInImport()) {
-      Iterable<UUID> ids =
-          transform(
-              mappings,
-              new Function<StubMapping, UUID>() {
-                @Override
-                public UUID apply(StubMapping input) {
-                  return input.getId();
-                }
-              });
+      Iterable<UUID> ids = mappings.stream().map(StubMapping::getId).collect(Collectors.toList());
       for (StubMapping mapping : listAllStubMappings().getMappings()) {
         if (!contains(ids, mapping.getId())) {
           removeStubMapping(mapping);
